apps/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-frontend-ingress
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - homelabs.co.in
      secretName: homelabs
  ingressClassName: nginx
  rules:
    - host: homelabs.co.in
      http:
        paths:
          - path: /longhorn(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
